fix: dark mode

--- a/special-pages/pages/new-tab/app/freemium-pir-banner/components/FreemiumPIRBanner.module.css
+++ b/special-pages/pages/new-tab/app/freemium-pir-banner/components/FreemiumPIRBanner.module.css
@@ -16,10 +16,6 @@
     &.icon {
         padding-left: var(--sp-2);
     }
-
-    [data-theme="dark"] & {
-        background-color: var(--color-white-at-6);
-    }
 }
 
 .iconBlock {
