--- a/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
+++ b/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
@@ -17,10 +17,6 @@
     &.icon {
         padding-left: var(--sp-2);
     }
-
-    [data-theme=dark] & {
-        background-color: var(--color-white-at-6);
-    }
 }
 
 .iconBlock {
